[package]
name = "dfs-rs"
version = "0.0.2"
edition = "2021"
authors = ["Neutron3529 <qweytr_1@163.com>"]
description = "A simple crate that wrote a dfs implementation with back tracking with the utilization of `Drop` trait. Currently it is VERY unstable, please do not use before the crate update to v0.1.0"
license-file = "LICENSE"
repository = "https://github.com/Neutron3529/dfs-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["unsafe"]
unsafe = []
